[project]
name = "human-ai-pair-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.15",
    "langchain-huggingface>=1.2.2",
    "pandas>=3.0.2",
    "torch>=2.11.0",
    "transformers>=5.7.0",
]
